test/fixtures/type-error/voidUnion.lys.ro
fun y(): void = {
  // stub
}

fun x(a: i32): i32 = {
  var z = match a {
    case 1 -> 1
    case 2 -> y()
    else -> 3
  }
  z
}